[package]
name = "data-streaming-rust"
version = "0.1.0"
authors = ["iranox"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yahoo_finance_api = { version = "1.1", features = ["blocking"] }
chrono = { version = "0.4", features = ["serde"] }
